# cloai

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  cloai.html  index.html  oai.html  pyproject.toml  search.js
.github/ISSUE_TEMPLATE/: bug_report.yaml  development_task.yaml
.github/workflows/: docs.yaml  pypi.yaml  test.yaml
cloai/: cli.html  core.html  openai_api.html
cloai/cli/: commands.html  parser.html  prompts.html  utils.html
cloai/core/: config.html  exceptions.html  utils.html
oai/: algorithms.html  cli.html  core.html  openai_api.html
oai/cli/: commands.html  parser.html  utils.html
oai/core/: config.html  exceptions.html
src/cloai/: __init__.py  __main__.py  exceptions.py  logs.py  openai_api.py  prompts.yaml
src/cloai/cli/: __init__.py  commands.py  parser.py  prompts.py  utils.py
src/cloai/core/: __init__.py  config.py  exceptions.py  utils.py
src/cloai/llm/: __init__.py  bedrock.py  llm.py  ollama.py  openai.py  prompts.py  utils.py
src/oai/: __main__.py  algorithms.py  openai_api.py
src/oai/cli/: commands.py  parser.py  utils.py
src/oai/core/: __init__.py  config.py  exceptions.py
tests/: .test.env  conftest.py  test_fibonacci.py
tests/integration/: test_llm.py
tests/unit/: test___main__.py  test_cli_utils.py  test_commands.py  test_openai_api.py  test_parser.py  test_utils.py
tests/unit/llm/: test_bedrock_openai.py  test_llm_interfaces.py  test_llm_unit.py  test_prompts.py
