[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cloai"
version = "0.0.1a10"
description = "A CLI for OpenAI's API"
authors = ["Reinder Vos de Wael <reinder.vosdewael@childmind.org>"]
license = "LGPL-2.1"
readme = "README.md"
packages = [{include = "cloai", from = "src"}]

[tool.poetry.dependencies]
python = ">3.8, <4.0"
pydantic-settings = "^2.1.0"
pydantic = "^2.5.2"
ffmpeg-python = "^0.2.0"
openai = "^1.6.0"
requests = "^2.31.0"
pyyaml = "^6.0.1"
python-docx = "^1.1.0"
pypdf = ">=3.17.3,<5.0.0"
aiohttp = "^3.9.3"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3,<9.0.0"
mypy = "^1.8.0"
pre-commit = {version = "^3.6.0", python = ">=3.9"}
pytest-cov = "^4.1.0"
ruff = "^0.1.7"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.23.2"
types-requests = "^2.31.0.10"
tox = "^4.11.4"
tox-poetry-installer = "1.0.0b1"
types-pyyaml = "^6.0.12.12"
pytest-dotenv = "^0.5.2"
aioresponses = "^0.7.6"
types-aiofiles = "^23.2.0.20240106"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.2.0"

[tool.poetry.scripts]
cloai = 'cloai.__main__:main'

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
env_files = [
  "./tests/.test.env"
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311, py312

[testenv]
allowlist_externals = poetry
deps = tox-poetry-installer
commands =
    poetry install -v
    pytest
"""

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv"
]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN101",  # Self should never be type annotated.
  "ANN102",  # cls should never be type annotated.
  "B008"  # Allow function call in arguments; this is common in FastAPI.
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
  "S101",  # Allow assets
  "ARG",  # Unused arguments are common in tests (fixtures).
  "FBT",  # Allow positional booleans
  "SLF001",  # Allow private member access.
  "INP001"  # No need for namespace packages in tests.
]
"src/**/models.py" = [
  "A003"  # Allow id as a field name.
]
"src/**/schemas.py" = [
  "A003"  # Allow id as a field name.
]
